--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
@@ -20,7 +20,7 @@
 
     <div class="container">
         <section class="filters">
-            <button class="search">Search</button>
+            <button class="search"> <h3>Search </h3></button>
         </section>
     </div>
 
