--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -20,6 +20,7 @@
 
     <div class="container">
         <section class="filters">
+            <h2>Filters</h2> <!-- Added heading to the section -->
             <button class="search">Search</button>
         </section>
     </div>
