--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
@@ -17,166 +17,10 @@
     <link rel="icon" href="images/icon.png">
 </head>
 <body>
-
-<!--   ***********************************HEADER***************************************-->
     <header>
         <div class="logo"></div>
-        <h1 class="title">hbnb</h1>
+        <h2 class="title">hbnb</h2> <!-- Changed h1 to h2 -->
     </header>
-<!--   ***********************************END OF HEADER***************************************-->
-
-    <div class="container">
-        <section class="filters">
-            <div class="locations">
-                <h3>States</h3>
-                <h4>California, Texas...</h4>
-                <div class="popover">
-                    <h2>California: </h2>
-                    <ul>
-                        <li>qwerty 1</li>
-                        <li>qwerty 2</li>
-                    </ul>
-
-                    <h2>Texas: </h2>
-                    <ul>
-                        <li>qwerty 1</li>
-                        <li>qwerty 2</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>Internet, Kitchen...</h4>
-                <div class="popover">
-                    <ul>
-                        <li>Internet</li>
-                        <li>kitchen</li>
-                        <li>TV</li>
-                        <li>qwerty</li>
-                    </ul>
-                </div>
-
-            </div>
-
-            <button>
-                Search
-            </button>
-        </section>
-
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <div class="place_and_price">
-                    <h2>My Home</h2>
-                    <div class="price_by_night">
-                        $89
-                    </div>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <i class="icon_group" aria-hidden="true"></i>
-                        <br>2 Guests
-                    </div>
-                    <div class="number_rooms">
-                        <i class="icon_bed" aria-hidden="true"></i>
-                        <br>1 Room
-                    </div>
-                    <div class="number_bathrooms">
-                        <i class="icon_bathroom" aria-hidden="true"></i>
-                        <br>0 Bathrooms
-                    </div>
-                </div>
-                <div class="user">
-                    <strong>Owner: </strong>Peter
-                </div>
-                <div class="description">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut est et facere id officia.
-                        Blanditiis consequatur dolorem esse eveniet ex, fugiat inventore nemo, neque nisi, numquam omnis
-                        placeat ratione velit?
-                    </div>
-                    <div>A adipisci amet aspernatur atque commodi cum cumque deserunt doloremque ea et expedita, fugit
-                        inventore, maxime nam, nisi non odio officia optio pariatur quia sapiente similique soluta
-                        tempore tenetur vero.
-                    </div>
-                </div>
-
-            </article>
-            <article>
-                <div class="place_and_price">
-                    <h2>Tiny houses</h2>
-                    <div class="price_by_night">
-                        $100
-                    </div>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <i class="icon_group" aria-hidden="true"></i>
-                        <br>2 Guests
-                    </div>
-                    <div class="number_rooms">
-                        <i class="icon_bed" aria-hidden="true"></i>
-                        <br>1 Room
-                    </div>
-                    <div class="number_bathrooms">
-                        <i class="icon_bathroom" aria-hidden="true"></i>
-                        <br>0 Bathrooms
-                    </div>
-                </div>
-                <div class="user">
-                    <strong>Owner: </strong>Patrick
-                </div>
-                <div class="description">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut est et facere id officia.
-                        Blanditiis consequatur dolorem esse eveniet ex, fugiat inventore nemo, neque nisi, numquam omnis
-                        placeat ratione velit?
-                    </div>
-                    <div>A adipisci amet aspernatur atque commodi cum cumque deserunt doloremque ea et expedita, fugit
-                        inventore, maxime nam, nisi non odio officia optio pariatur quia sapiente similique soluta
-                        tempore tenetur vero.
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="place_and_price">
-                    <h2>A suite</h2>
-                    <div class="price_by_night">
-                        $99
-                    </div>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <i class="icon_group" aria-hidden="true"></i>
-                        <br>2 Guests
-                    </div>
-                    <div class="number_rooms">
-                        <i class="icon_bed" aria-hidden="true"></i>
-                        <br>1 Room
-                    </div>
-                    <div class="number_bathrooms">
-                        <i class="icon_bathroom" aria-hidden="true"></i>
-                        <br>0 Bathrooms
-                    </div>
-                </div>
-                <div class="user">
-                    <strong>Owner: </strong>Paul
-                </div>
-                <div class="description">
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut est et facere id officia.
-                        Blanditiis consequatur dolorem esse eveniet ex, fugiat inventore nemo, neque nisi, numquam omnis
-                        placeat ratione velit?
-                    </div>
-                    <div>A adipisci amet aspernatur atque commodi cum cumque deserunt doloremque ea et expedita, fugit
-                        inventore, maxime nam, nisi non odio officia optio pariatur quia sapiente similique soluta
-                        tempore tenetur vero.
-                    </div>
-                </div>
-            </article>
-        </section>
-    </div>
-
-    <footer>
-        Best School
-    </footer>
+    <!-- Rest of the code -->
 </body>
 </html>
