--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
@@ -22,7 +22,7 @@
 <!--   ***********************************HEADER***************************************-->
 <header>
     <div class="logo"></div>
-    <h1 class="title">hbnb</h1>
+    <h2 class="title">hbnb</h2>
 </header>
 <!--  ************************************END OF HEADER***************************************-->
 
